[gd_scene load_steps=4 format=2]

[ext_resource path="res://player_controller/GameLogic_addon.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.698039, 0.376471, 0.941176, 1 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )
radius = 0.5
height = 1.0

[node name="GameLogic_addon" type="Spatial"]
script = ExtResource( 1 )

[node name="root" type="Spatial" parent="."]

[node name="ray_activate" type="RayCast" parent="root"]
enabled = true
cast_to = Vector3( 0, 0, -2 )

[node name="ray_blink" type="RayCast" parent="root"]
enabled = true
cast_to = Vector3( 0, 0, -16 )

[node name="grab_point" type="Spatial" parent="root"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.6 )

[node name="blink_marker" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null
